--- a/templates/base.html
+++ b/templates/base.html
@@ -47,8 +47,8 @@
 <script src="/static/bootstrap-3.3.7/js/jquery-1.12.4.min.js"></script>
 <script src="/static/bootstrap-3.3.7/js/bootstrap.min.js"></script>
 {% block script_extends %}{% endblock %}
-<div class="col-xs-4 col-xs-offset-4 navbar-fixed-bottom">
-    <p class="text-center text-capitalize">Powered by thinson</p>
+<div class="col-xs-8 col-xs-offset-2 navbar-fixed-bottom">
+    <p class="text-center  bottom-text">Powered by thinson</p>
 </div>
 </body>
 </html>
