--- a/templates/home.html
+++ b/templates/home.html
@@ -6,5 +6,5 @@
     <link rel="stylesheet" href="/static/home.css">
 {% endblock %}
 {% block content %}
-    <h3 class="hello-words">欢迎使用易班在线填表系统！</h3>
+    <h3 class="hello-words">欢迎使用易班<br>在线填表系统！</h3>
 {% endblock %}
