--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block content %}
     <div class="row">
-        <div class="col-xs-4 col-xs-offset-4">
+        <div class="col-xs-10 col-md-4 col-xs-offset-1 col-md-offset-4">
             <div class="panel panel-default">
                 <div class="panel-heading">
                 <h3 class="panel-title">登录</h3>
